--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev":   "nodemon app.js",
+    "test":  "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -15,14 +17,19 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "oyster-db": "*",
     "ion-cortex": "^1.3.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
+    "mongoose": "^9.2.1",
     "nanoid": "^3.3.2",
+    "oyster-db": "*",
     "qantra-pineapple": "^1.0.7",
     "request-ip": "^2.1.3",
+    "swagger-ui-express": "^5.0.1",
     "useragent": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.14"
   }
 }
