test: set up TDD scaffolding for auth, token, and user managers
Install Jest and define method stubs for Auth.manager (login, logout, me, refreshShortToken), Token.manager (createLongToken, createShortToken, revokeLongToken, validateLongToken), and User.manager (getUser).
Write comprehensive unit tests covering happy paths, error propagation, security constraints (password stripping, token idempotency), and correct argument passing.
Remove `LONG_TOKEN_SECRET`. Long tokens are now opaque DB-stored strings, making JWT signing for long tokens unnecessary.

	new file:   managers/entities/auth/Auth.manager.js
	new file:   tests/auth.manager.test.js
	new file:   tests/token.manager.test.js
	new file:   tests/user.manager.test.js

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,11 @@ MONGO_URI=mongodb://localhost:27017/school-management
 REDIS_URI=redis://127.0.0.1:6379
 
 # JWT secrets — keep these private, never commit them
-LONG_TOKEN_SECRET=
 SHORT_TOKEN_SECRET=
+
+# Token expiry durations (e.g. 30d, 1h, 60m)
+LONG_TOKEN_EXPIRES_IN=30d
+SHORT_TOKEN_EXPIRES_IN=1h
 
 # NaCl encryption — must be a base64-encoded 32-byte key
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
