--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mongoose": "^9.2.1",
+    "morgan": "^1.10.1",
     "nanoid": "^3.3.2",
     "oyster-db": "*",
     "qantra-pineapple": "^1.0.7",
@@ -37,6 +38,8 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "testMatch": ["**/tests/**/*.test.js"]
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ]
   }
 }
